--- a/assets/style.css
+++ b/assets/style.css
@@ -197,6 +197,7 @@ main {
     align-items: center;
     justify-content: center;
     padding: 8px;
+    top: 25px;
 }
 .shadow-topic h1{
     color:  #000712;
@@ -205,10 +206,11 @@ main {
     text-shadow: 2px 2px 15px black;
 }
 .topic-section{
-    text-align: center;
-    position: absolute;
-    top: 25%;
-    left: 40%;
+    /*text-align: center;*/
+    /*position: absolute;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 h3{
     font-size: 45px;
@@ -250,7 +252,7 @@ h3 span{
     transition: all 2s;
 }
 .about-image{
-    background: url(images/homeImage.png);
+    background: url(images/aboutImage.png);
     background-size: cover;
     background-position: center;
     width: 300px;
@@ -289,8 +291,7 @@ h3 span{
     font-weight: 500;
     top: 3px;
     border-radius: 25px;
-    box-shadow: 28px 28px 50px rgba(13, 39, 80, 0.10);
-    background-color: #353250;
+    background-color: #202337;
     border-width: 0;
     width: 150px;
     padding-left: 19px;
@@ -299,6 +300,7 @@ h3 span{
     margin-top: 3px;
     margin-bottom: 80px;
     transition: all .6s;
+    box-shadow: black 2px 2px 10px;
 }
 .about-description button:hover{
     transform: scale(1.1);
@@ -307,7 +309,7 @@ h3 span{
 .journey{
     /*height: 100vh;*/
     position: relative;
-    padding: 100px 10% 0;
+    padding: 50px 10% 0;
 }
 .journey-topic{
     position: absolute;
@@ -345,7 +347,7 @@ h3 span{
 }
 .skills-container {
     position: relative;
-    left: 30px;
+    left: 20px;
     top: 90%;
     padding: 40px 10%;
     height: 400px;
@@ -519,7 +521,7 @@ h3 span{
 }
 .assignment-card{
     width: 100%;
-    height: 250px;
+    /*height: 250px;*/
     border: 1px solid #353250;
     /*margin: 2px;*/
     padding: 40px;
@@ -536,7 +538,7 @@ h3 span{
 
 .assignment-card img{
     width: 100%;
-    height: 180px;
+    /*height: 180px;*/
     transition: 5s ease;
     border-radius: 25px;
 
@@ -579,12 +581,11 @@ h3 span{
     height: 4rem;
     border-radius: 50%;
     border: 2px solid white;
-    margin: 10%;
-}
-.assigment-layer a {
+    margin: 8%;
     font-size: 30px;
     text-decoration: none;
 }
+
 
 /*==========================================================gallery===============================================*/
 .gallery{
@@ -798,13 +799,6 @@ form input, form textarea{
         font-size: 80px;
         font-weight: 800;
     }
-    .topic-section {
-        text-align: center;
-        position: absolute;
-        top: 12%;
-        left: 0;
-        right: 0;
-    }
 
     .message-section button {
         width: 40%;
@@ -927,17 +921,11 @@ form input, form textarea{
     }
     .shadow-topic h1{
         font-size: 50px;
+
     }
     h3 {
         font-size: 30px;
         font-weight: 500;
-    }
-    .topic-section {
-        text-align: center;
-        position: absolute;
-        right: 0;
-        left: 0;
-        top: 10%;
     }
 
     .about-container {
@@ -950,11 +938,11 @@ form input, form textarea{
         font-size: 12px;
     }
     .about button {
-        height: 40px;
+        /*height: 40px;
         width: 110px;
         border: 3px solid #FF014F;
         font-size: 12px;
-        margin: 10px;
+        margin: 10px;*/
     }
     .journey-container div p {
         font-size: 14px;
