--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&display=swap');
-
+html{
+    scroll-behavior: smooth;
+}
 *{
     margin: 0;
     padding: 0;
@@ -296,13 +298,14 @@ h3 span{
     border-radius: 25px;
     background-color:transparent;
     width: 150px;
-    padding-left: 19px;
     /* left: 3px; */
     height: 47px;
     margin-top: 3px;
     margin-bottom: 80px;
     transition: all .6s;
     box-shadow: black 2px 2px 10px;
+    padding-left: 15px;
+    padding-right: 5px;
 }
 .about-description button:hover{
     transform: scale(1.1);
@@ -333,6 +336,12 @@ h3 span{
     width: 100%;
     border: 2px solid white;
     padding: 2%;
+    box-shadow: -23px -23px 15px black,black 2px 2px 10px;
+    transition: 2s;
+    border-radius: 25px;
+}
+.journey-container div:hover{
+    transform: scale(0.97);
 }
 .journey-container div h5{
     color: #FF014F;
