--- a/assets/style.css
+++ b/assets/style.css
@@ -49,6 +49,10 @@ body{
     font-size: 18px;
 }
 
+.nav_bar a:hover{
+    color: wheat;
+}
+
 main {
     padding: 30px 0 0;
 }
@@ -334,7 +338,7 @@ h3 span{
 .journey-container div{
     height:100px/* calc(100%/4)*/;
     width: 100%;
-    border: 2px solid white;
+    border: 2px solid #353250;
     padding: 2%;
     box-shadow: -23px -23px 15px black,black 2px 2px 10px;
     transition: 2s;
@@ -379,6 +383,7 @@ h3 span{
     box-shadow: #353250 2px 2px 5px;
 }
 /*====================================================services===========================================*/
+/*
 .services{
 
 }
@@ -461,56 +466,151 @@ h3 span{
     transform: rotateY(0deg);
     background-color: #FF014F;
 }
-
-/*======================================================projects===============================================*/
-.projects{
+*/
+.services{
     padding: 60px 10%;
     width: 100%;
     position: relative;
 }
 
-.project-container{
+.service-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 30px;
-    margin: 40px 10px;
+    grid-gap: 20px;
 }
-.project-card{
+
+.service-card{
     border: 2px solid #353250;
     position: relative;
-    padding: 20px;
     border-radius: 25px;
-    background: #202337;
+    background: transparent;
+    padding: 40px;
+    gap: 30px;
+    display: flex;
+    flex-direction: column;
+    transition: 0.5s;
+    text-align: center;
+
 }
-.project-card img{
-    height: 60%;
-    width: 70%;
-    border-radius: 25px;
+
+.service-card:hover{
+    transform: scale(0.97);
+    transform-origin: top center;
+}
+
+.service-card h4{
+    color: #9A98A8;
+    font-size: 24px;
+}
+.service-card p{
+    color: #9A98A8;
+}
+
+.service-card i{
+    font-size: 50px;
+    width: 80px;
+    height: auto;
+    border-radius: 50%;
+    /*border: 2px solid #FF014F;*/
     padding: 10px;
+    background: #FF014F;
 }
-.project-card h4{
-    color: #9A98A8;
+
+
+/*======================================================projects===============================================*/
+.projects{
+    position: relative;
 }
-.project-card p{
-    color: #9A98A8;
+.project-list{
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.project-card{
+    margin: 20px;
+    position: relative;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+}
+
+.face-front,
+.face-back{
+    width: 300px;
+    min-height: 300px;
+    height: auto;
+    background-color: #1B1D30;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    transition: 0.7s cubic-bezier(0.4,0.2,0.2,1);
+    border: 2px solid #353250;
+    border-radius: 50px;
+}
+.face-front{
+    transform: rotateY(0deg);
+}
+.face-back{
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotateY(180deg);
+}
+.face-front::after,
+.face-back::after{
+    content: "";
+    width: 0;
+    height: 100%;
+    position: absolute;
+    color: white;
+    top: 0;
+    left: 0;
+
+}
+.face-front .content-wrap,
+.face-back .content-wrap{
+    width: 100%;
+    padding: 50px ;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%) translateZ(60px) scale(0.94);
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.content-wrap img{
+    height: 200px;
+    width: 200px;
+    border-radius: 25px;
+}
+
+.content-wrap h4{
+    margin-top: 8px;
+    color: white;
+    text-align: center;
+}
+.content-wrap p{
+    color: white;
+    font-size: 14px;
+    text-align: center;
+}
+.project-card:hover .face-front{
+    transform: rotateY(-180deg);
+}
+.project-card:hover .face-back{
+    transform: rotateY(0deg);
+    background-color: #1B1D30;
 }
 .more-arrow{
-    right: 100px;
+    right: 80px;
     bottom: 0px;
     margin: auto;
     position: absolute;
     font-size: 40px;
 }
-
-.project-card img{
-    position: center;
-    transition: .5s;
-}
-
-.project-card:hover img{
-    transform: scale(1.1);
-}
-
 /*=======================================================assignment=============================================*/
 .assignments{
     padding: 60px 10%;
@@ -876,43 +976,7 @@ footer{
         text-align: left;
         font-size: 14px;
     }
-    /*.social-media {
-        padding: 3% 0;
-        top: 100%;
-        left: 40px;
-    }*/
-    /*.status {
-        top: 82%;
-    }*/
-    /*.line {
-        top: 108%;
-        left: 74%;
-    }*/
-    /*.status h3 {
-        font-family: Quicksand, sans-serif;
-        font-size: 20px;
-    }*/
-    .status{
-        left: 40px;
-        top: 92%;
-    }
-    .status h3 span {
-        font-size: 18px;
-    }
-    .status h3 {
-        font-size: 15px;
-        white-space: nowrap;
-    }
-    /*.status h3 span {
-        font-size: 15px;
-    }*/
-    /*.social-media {
-        top: 102%;
-        left: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }*/
+
     .shadow-topic h1{
         font-size: 50px;
     }
@@ -972,11 +1036,9 @@ footer{
         width: 70px;
         margin: 20px 10px;
     }
-    .services-list {
-        display: grid;
+    .service-container {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-gap: 40px;
-        margin: 40px 20px;
     }
 }
 
@@ -1024,13 +1086,6 @@ footer{
     .status h3 span {
         font-size: 15px;
     }
-    /*.social-media {
-        top: 102%;
-        left: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }*/
     .shadow-topic h1{
         font-size: 40px;
     }
@@ -1042,15 +1097,18 @@ footer{
     .face-front, .face-back {
         width: 250px;
     }
-    .project-container {
+    .service-container {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
-    .project-card p {
+    .service-card p {
         font-size: 12px;
     }
-    .project-card img{
+    .service-card img{
         width: 70%;
         height: 50%;
+    }
+    .face-front .content-wrap, .face-back .content-wrap {
+        padding: 25px;
     }
     .assignment-container {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
